fixed an unreadable color

--- a/css/sifter-mobile.less
+++ b/css/sifter-mobile.less
@@ -468,7 +468,7 @@ button.filter-button.last
 .sifter-comment-author
 {
   /*color: #cf2037;*/
-  color: @secondaryColor;
+  color: @siftrRed;
 }
 
 .sifter-new-comment textarea
